--- a/vox-common/package.json
+++ b/vox-common/package.json
@@ -16,5 +16,9 @@
     "socket.io-client": "^1.3.2",
     "ursa": "^0.8.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/spacemaus/postvox.git"
+  },
   "license": "MIT"
 }
