--- a/vox-client/package.json
+++ b/vox-client/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "blessed": "0.0.38",
     "bluebird": "^2.5.3",
     "colors": "^1.0.3",
     "debug": "^2.1.0",
