--- a/vox-common/package.json
+++ b/vox-common/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vox-common",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Common libs for Postvox clients and servers",
   "author": "spacemaus@spacemaus.com",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter dot --slow 200ms --bail"
   },
   "dependencies": {
     "bluebird": "^2.5.3",
@@ -16,9 +16,20 @@
     "socket.io-client": "^1.3.2",
     "ursa": "^0.8.1"
   },
+  "devDependencies": {
+    "level": "^0.18.0",
+    "mocha": "^2.1.0",
+    "temp": "^0.8.1",
+    "vox-server": "^0.0.2"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/spacemaus/postvox.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "body-parser": "^1.11.0",
+    "express": "^4.11.2",
+    "mocha": "^2.1.0"
+  }
 }
